--- a/home.html
+++ b/home.html
@@ -28,19 +28,8 @@
         <title>U-Vend, Inc. Depot Management</title>
     </head>
     <body>
-        <div class="app">
-            <h1>U-Vend, Inc.</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">
-                    Device is Ready<br><a href="home.html">Home</a>
-                </p>
-            </div>
-        </div>
-        <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
+
+        <h1>Depot Management Home</h1>
+
     </body>
 </html>
