--- a/login.html
+++ b/login.html
@@ -12,25 +12,33 @@
 	<script src="http://code.jquery.com/jquery-1.4.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
 
+    <meta name="msapplication-tap-highlight" content="no" />
+
 	<title>Log In</title>
 
 </head>
 <body>
+    <div data-role="page">
 
-<div data-role="page">
+    	<div data-role="header">
+    		<h1>Log In</h1>
+        </div><!-- /header -->
 
-	<div data-role="header">
-		<h1>Page Title</h1>
-	</div><!-- /header -->
+        <div role="main" class="ui-content">
+    		<form onsubmit="logIn()">
+                <input type="text" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Password">
+                <input type="submit" value="Submit">
+    		</form>
+        </div><!-- /content -->
 
-	<div role="main" class="ui-content">
-		<p>Page content goes here.</p>
-	</div><!-- /content -->
+        <div data-role="footer">
+		
+        </div><!-- /footer -->
+    </div><!-- /page -->
 
-	<div data-role="footer">
-		<h4>Page Footer</h4>
-	</div><!-- /footer -->
-</div><!-- /page -->
+    <script type="text/javascript" src="phonegap.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
 
 </body>
 </html>
