--- a/login.html
+++ b/login.html
@@ -26,8 +26,8 @@
 
         <div role="main" class="ui-content">
     		<form onsubmit="logIn()">
-                <input type="text" name="email" placeholder="Email">
-                <input type="password" name="password" placeholder="Password">
+                <input type="text" id="email" name="email" placeholder="Email">
+                <input type="password" id="password" name="password" placeholder="Password">
                 <input type="submit" value="Submit">
     		</form>
         </div><!-- /content -->
