--- a/home.html
+++ b/home.html
@@ -29,7 +29,12 @@
     </head>
     <body>
 
-        <h1>Depot Management Home</h1>
+        <script type="text/javascript" src="js/auth.js"></script>
+        <script type="text/javascript">
+            jQuery(document).ready(function() {
+                isLoggedIn();
+            });
+        </script>
 
     </body>
 </html>
