--- a/home.html
+++ b/home.html
@@ -28,13 +28,15 @@
         <title>U-Vend, Inc. Depot Management</title>
     </head>
     <body>
-
+Home
+<!--
         <script type="text/javascript" src="js/auth.js"></script>
         <script type="text/javascript">
             jQuery(document).ready(function() {
                 isLoggedIn();
             });
         </script>
+-->
 
     </body>
 </html>
