--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="app">
             <h1>U-Vend, Inc.</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Initializing...</p>
+                <p class="event listening">Initializing ;)</p>
                 <p class="event received">
                     Device is Ready<br><a href="home.html">Home</a>
                 </p>
