removed auth.js

--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
         <div class="app">
             <h1>U-Vend, Inc.</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Initializing ;)</p>
+                <p class="event listening">Initializing... ;)</p>
                 <p class="event received">
                     Device is Ready<br><a href="home.html">Home</a>
                 </p>
             </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/auth.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
