--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
 
-    <script type="text/javascript" src="phonegap.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
 
@@ -51,11 +51,12 @@
     </div>
 </div>
 
-
 <script>
+/*
 $("#loginPage").live("pageinit", function(e) {
         app.checkPreAuth();
     });
+*/
 </script>
 
 </body>
