--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
     </div>
 </div>
 
+<!--
 <script>
-/*
 $("#loginPage").live("pageinit", function(e) {
-        app.checkPreAuth();
+
+        // app.checkPreAuth();
     });
-*/
 </script>
+-->
+
 
 </body>
 </html>
