turned href into buttons

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@ loading
     </div><!-- /header -->
 
     <div data-role="content">   
-        <p><a href="#loginPage">Back to login</a></p>   
-        <p><a href="" onclick="app.fetchBrands()">Fetch brands</a></p>
-        <p><a href="" onclick="app.logout()">Log out</a></p>
+        <p><a href="#loginPage" data-role="button">Back to login</a></p>   
+        <p><a href="" data-role="button" onclick="app.fetchBrands()">Fetch brands</a></p>
+        <p><a href="" data-role="button" onclick="app.logout()">Log out</a></p>
         <div id="brandsDisplay">
         </div>
 
