--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <title>U-Vend, Inc. Depot Management</title>
 
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
+    <!--
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    -->
+
 
     <!-- critical -->
-    <script type="text/javascript" src="phonegap.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/sha1.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js"></script>
+    <script src="phonegap.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
+    <script src="js/sha1.js" type="text/javascript"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js" type="text/javascript"></script>
     <!-- /critical -->
     <!-- plugins -->
     <!-- /plugins -->
     <!-- themes -->
     <!-- /themes -->
-
-
-
-
 </head>
 
 <!-- fires after dom, images, scripts are loaded -->
@@ -34,17 +34,18 @@
 <body>
 
 
-<div id="launcherPage" data-role="page" data-theme="b">
+<div id="launcherPage" data-role="page" data-theme="a">
 loading
 </div>
     
-<div id="loginPage" data-role="page" data-theme="b">
+<div id="loginPage" data-role="page" data-theme="a">
 
     <div data-role="header">
             <h1>U-Vend, Inc.</h1>
     </div>
 
     <div data-role="content">    
+
         <form id="loginForm">
         <div data-role="fieldcontain" class="ui-hide-label">
             <label for="email">Email:</label>
@@ -65,23 +66,66 @@ loading
     </div>
 </div>
 
-
-<div id="brandsPage" data-role="page" data-theme="b">
+<div id="homePage" data-role="page" data-theme="a">
 
     <div data-role="header">
             <h1>U-Vend, Inc.</h1>
-    </div><!-- /header -->
+    </div>
+
+
 
     <div data-role="content">   
-        <p><a href="#loginPage" data-role="button">Back to login</a></p>   
+        <!--
         <p><a href="" data-role="button" onclick="app.fetchBrands()">Fetch brands</a></p>
+        <p><a href="#loginPage" data-role="button">Back to login</a></p>   
+        -->
+
+        <p><a href="#machineCupsPage" data-role="button">Machine Cups</a></p>   
+        <p><a href="#rollsOfCoinPage" data-role="button">Rolls Of Coin</a></p>   
         <p><a href="" data-role="button" onclick="app.logout()">Log out</a></p>
-        <div id="brandsDisplay">
-        </div>
+
+    </div>
+
+    <div data-role="footer">
+        <h4>&copy; U-Vend, Inc.</h4>
+    </div>
+
+</div>
 
 
 
-    </div><!-- /content -->
+
+
+
+
+<div id="machineCupsPage" data-role="page" data-theme="a">
+
+
+    <div data-role="header">
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext">Back</a>
+        <h1>Machine Cup Totals</h1>
+        <a href="#machineCupsPage" data-ajax="false" data-icon="refresh" data-iconpos="notext">Reload</a>
+    </div>
+
+
+    <div data-role="content">   
+
+    <ul data-role="listview" data-inset="true">
+
+            <li>
+                <a href="#machineFlavorsPage">Machine 1<span class="ui-li-count">250</span></a>
+            </li>
+            <li>
+                <a href="#machineFlavorsPage">Machine 1<span class="ui-li-count">250</span></a>
+            </li>
+            <li>
+                <a href="#machineFlavorsPage">Machine 1<span class="ui-li-count">250</span></a>
+            </li>
+        </ul>
+
+
+
+    </div>
 
     <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
@@ -91,6 +135,179 @@ loading
 </div>
 
 
+
+
+
+
+<div id="machineFlavorsPage" data-role="page" data-theme="a">
+
+
+    <div data-role="header">
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext">Back</a>
+        <h1>Machine 15 - Cups</h1>
+        <a href="#machineFlavorsPage" data-ajax="false" data-icon="refresh" data-iconpos="notext">Reload</a>
+    </div>
+
+
+    <div data-role="content">   
+
+
+        <ul data-role="listview" data-inset="true">
+
+            <li>
+                <a href="#machineFlavorEditPage">Cotton Candy<span class="ui-li-count">100</span></a>
+            </li>
+            <li>
+                <a href="#machineFlavorEditPage">Chocolate<span class="ui-li-count">89</span></a>
+            </li>
+            <li>
+                <a href="#machineFlavorEditPage">Swirl<span class="ui-li-count">18</span></a>
+            </li>
+        </ul>
+        <a href="#machineFlavorAddPage" data-role="button">Add Flavor</a>
+
+    </div>
+
+    <div data-role="footer">
+        <h4>&copy; U-Vend, Inc.</h4>
+    </div>
+
+
+</div>
+
+
+<div id="machineFlavorEditPage" data-role="page" data-theme="a">
+
+
+    <div data-role="header">
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext">Back</a>
+        <h1>Machine 15</h1>
+    </div>
+
+
+    <div data-role="content">   
+
+
+        <ul data-role="listview" data-inset="true">
+
+            <li>
+            <div data-role="fieldcontain">
+            <label>Flavor</label>
+            <input type=text class="ui-disabled" value="Cotton Candy">
+            </div>
+            </li>
+
+
+            <li>
+            <div data-role="fieldcontain">
+            <label for="cups-slider">Cups</label>
+            <input name="cups-slider" id="cups-slider" type="range" min="0" max="200" value="75">
+            </div>
+            </li>
+
+            <li>
+                <input type="submit" value="Update Flavor" id="submitButton">
+                <input type="submit" value="Delete Flavor" id="submitButton">
+            </li>
+        </ul>
+
+    </div>
+
+    <div data-role="footer">
+        <h4>&copy; U-Vend, Inc.</h4>
+    </div>
+
+
+</div>
+
+
+
+<div id="machineFlavorAddPage" data-role="page" data-theme="a">
+
+
+    <div data-role="header">
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext">Back</a>
+        <h1>Machine 15</h1>
+    </div>
+
+
+    <div data-role="content">   
+
+
+        <ul data-role="listview" data-inset="true">
+
+            <li>
+            <div data-role="fieldcontain">
+            <label for="flavor-select">Flavor</label>
+            <select name="flavor-select" id="flavor-select">
+                    <option></option>
+                    <option value="Blueberry">Blueberry</option>
+                    <option value="Orange">Orange</option>
+            </select>
+            </div>
+            </li>
+
+
+            <li>
+            <div data-role="fieldcontain">
+            <label for="cups-slider">Cups</label>
+            <input name="cups-slider" id="cups-slider" type="range" min="0" max="200" value="75">
+            </div>
+            </li>
+
+            <li>
+                <input type="submit" value="Add Flavor" id="submitButton">
+            </li>
+        </ul>
+
+    </div>
+
+    <div data-role="footer">
+        <h4>&copy; U-Vend, Inc.</h4>
+    </div>
+
+
+</div>
+
+
+
+
+<div id="rollsOfCoinEditPage" data-role="page" data-theme="a">
+
+    <div data-role="header">
+        <a href="" data-rel="back" data-icon="delete">Cancel</a>
+        <h1>Rolls Of Coin</h1>
+        <a href="" data-icon="check">Save</a>
+    </div>
+
+
+
+    <div data-role="content">   
+
+    <h2>8/23/2014</h2>
+    <h3>Van 15 - 111 W. Hampshire...</h3>
+
+    <div><a href="">Save</a></div>
+
+    <table>
+    <tbody>
+        <tr><th>Quarters</th><td>5</td></tr>
+        <tr><th>Dimes</th><td>50</td></tr>
+        <tr><th>Nickels</th><td>20</td></tr>
+        <tr><th>Pennies</th><td>0</td></tr>
+    </tbody>
+    </table>
+
+
+    <div><a href="">Save</a></div>
+    </div>
+
+    <div data-role="footer">
+        <h4>&copy; U-Vend, Inc.</h4>
+    </div>
+
+
+</div>
 
 </body>
 </html>
