--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="js/index.js" type="text/javascript"></script>
     <script src="js/sha1.js" type="text/javascript"></script>
+    <script src="js/fastclick.js" type="text/javascript"></script>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js" type="text/javascript"></script>
     <!-- /critical -->
