fixed on click event back button issue

--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
      <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-     <!--
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    -->
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="msapplication-tap-highlight" content="no" />
 
     <title>U-Vend, Inc. Depot Management</title>
 
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.css" />
-    <!--
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    -->
+    <!-- <link rel="stylesheet" type="text/css" href="css/index.css" /> -->
 
 
     <!-- critical -->
@@ -143,7 +138,7 @@ loading
     <div data-role="header">
         <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext">Back</a>
         <h1>Machine 15 - Cups</h1>
-        <a href="#machineFlavorsPage" data-ajax="false" data-icon="refresh" data-iconpos="notext">Reload</a>
+        <a href="#machineFlavorsPage" data-icon="refresh" data-iconpos="notext">Reload</a>
     </div>
 
 
@@ -191,8 +186,8 @@ loading
 
             <li>
             <div data-role="fieldcontain">
-            <label for="cups-slider">Cups</label>
-            <input name="cups-slider" id="cups-slider" type="range" min="0" max="200" value="75" />
+            <label for="cups-count">Cups</label>
+            <input name="cups-count" id="cups-count" type="number" value=75 />
             </div>
             </li>
 
@@ -243,8 +238,8 @@ loading
 
             <li>
             <div data-role="fieldcontain">
-            <label for="cups-slider">Cups</label>
-            <input name="cups-slider" id="cups-slider" type="range" min="0" max="200" value="75" />
+            <label for="cups-count">Cups</label>
+            <input name="cups-count" id="cups-count" type="number" value="75" />
             </div>
             </li>
 
@@ -335,30 +330,30 @@ loading
         <ul data-role="listview" data-inset="true">
             <li>
             <div data-role="fieldcontain">
-            <label for="quarters-slider">Quarters</label>
-            <input name="quarters-slider" id="quarters-slider" type="range" min="0" max="200" value="75" />
+            <label for="quarters-count">Quarters</label>
+            <input name="quarters-count" id="quarters-count" type="number" value="75" />
             </div>
             </li>
 
             <li>
             <div data-role="fieldcontain">
-            <label for="dimes-slider">Dimes</label>
-            <input name="dimes-slider" id="dimes-slider" type="range" min="0" max="200" value="75" />
+            <label for="dimes-count">Dimes</label>
+            <input name="dimes-count" id="dimes-count" type="number" value="75" />
             </div>
             </li>
 
             <li>
             <div data-role="fieldcontain">
-            <label for="nickels-slider">Nickels</label>
-            <input name="nickels-slider" id="nickels-slider" type="range" min="0" max="200" value="75" />
+            <label for="nickels-count">Nickels</label>
+            <input name="nickels-count" id="nickels-count" type="number" value="75" />
             </div>
             </li>
 
 
             <li>
             <div data-role="fieldcontain">
-            <label for="pennies-slider">Pennies</label>
-            <input name="pennies-slider" id="pennies-slider" type="range" min="0" max="200" value="75" />
+            <label for="pennies-count">Pennies</label>
+            <input name="pennies-count" id="pennies-count" type="number" value="75" />
             </div>
             </li>
 
