replaced slidefade with slide transition - trying vclick instead of click

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 
     <div data-role="content">   
         <ul data-role="listview" data-inset="true">
-        <li><a href="#machineCupsPage" data-transition="slidefade">Machine Cups</a></li>
-        <li><a href="#rollsOfCoinPage" data-transition="slidefade">Rolls Of Coin</a></li>
+        <li><a href="#machineCupsPage" data-transition="slide">Machine Cups</a></li>
+        <li><a href="#rollsOfCoinPage" data-transition="slide">Rolls Of Coin</a></li>
         <li><a href="" data-role="button" onclick="app.logout()">Log out</a></li>
         </ul>
 
@@ -107,7 +107,7 @@
     </div>
 
     <div data-role="header">
-        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slidefade">Back</a>
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
     </div>
@@ -148,7 +148,7 @@
     </div>
 
     <div data-role="header">
-        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slidefade">Back</a>
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
     </div>
@@ -178,7 +178,7 @@
 
 
     <div data-role="header">
-        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slidefade">Back</a>
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
 
@@ -233,7 +233,7 @@
 
 
     <div data-role="header">
-        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slidefade">Back</a>
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
 
@@ -292,7 +292,7 @@
     </div>
 
     <div data-role="header">
-        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slidefade">Back</a>
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
     </div>
@@ -305,13 +305,13 @@
         <ul data-role="listview" data-inset="true">
 
             <li>
-                <a href="#rollsOfCoinEditPage" data-transition="slidefade">Van 15 - 111 W. Hampshire..., 50 Quarters, 30 Dimes, 15 Nickels, 0 Pennies</a>
+                <a href="#rollsOfCoinEditPage" data-transition="slide">Van 15 - 111 W. Hampshire..., 50 Quarters, 30 Dimes, 15 Nickels, 0 Pennies</a>
             </li>
             <li>
-                <a href="#rollsOfCoinEditPage" data-transition="slidefade">Van 15 - 111 W. Hampshire..., 50 Quarters, 30 Dimes, 15 Nickels, 0 Pennies</a>
+                <a href="#rollsOfCoinEditPage" data-transition="slide">Van 15 - 111 W. Hampshire..., 50 Quarters, 30 Dimes, 15 Nickels, 0 Pennies</a>
             </li>
             <li>
-                <a href="#rollsOfCoinEditPage" data-transition="slidefade">Van 15 - 111 W. Hampshire..., 50 Quarters, 30 Dimes, 15 Nickels, 0 Pennies</a>
+                <a href="#rollsOfCoinEditPage" data-transition="slide">Van 15 - 111 W. Hampshire..., 50 Quarters, 30 Dimes, 15 Nickels, 0 Pennies</a>
             </li>
         </ul>
 
@@ -345,7 +345,7 @@
 <div id="rollsOfCoinEditPage" data-role="page" data-theme="a">
 
     <div data-role="header">
-        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slidefade">Back</a>
+        <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
 
