changed flavor add button to listview with slide transition

--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
         <ul id="machineFlavorsPageList" data-role="listview" data-inset="true">
         </ul>
 
-        <a id="machineFlavorAddLink" href="#machineFlavorAddPage" data-role="button">Add Flavor</a>
+        <ul data-role="listview" data-inset="true">
+        <li><a id="machineFlavorAddLink" href="#machineFlavorAddPage" data-transition="slide">Add Flavor</a></li>
+        </ul>
 
     </div>
 
