--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.3/jquery.mobile.min.js" type="text/javascript"></script>
 </head>
 
-<!-- fires after dom, images, scripts are loaded -->
+<!-- fire after dom, images, scripts are loaded -->
 <body onLoad="app.initialize();">
 
 
